[package]
name = "fc-db"
version = "2.0.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Frontier database backend"
edition = "2021"
 
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = "0.1"

ethereum = { version = "0.14.0", features = ["with-codec"], optional = true }
futures = { version = "0.3.28", optional = true }
kvdb-rocksdb = { version ="0.19.0", optional = true }
log = { version = "0.4.17", default-features = false }
parity-db = {  version = "0.4.8" }
parking_lot = {  version = "0.12.1" }
scale-codec = { package = "parity-scale-codec",version = "3.2.1" }
smallvec = { version = "1.10", optional = true }
sqlx = {  version = "0.7.0-alpha.3", features = ["runtime-tokio-native-tls", "sqlite"], optional = true }
tokio = {version ="1.28.2", features = ["macros", "sync"], optional = true }
# Substrate
sc-client-api = { version = "4.0.0-dev", path = "../../client/api",optional = true}

sc-client-db = { version = "0.10.0-dev", path = "../../client/db" }
sp-api = { version = "4.0.0-dev", path = "../../primitives/api",optional = true }
sp-blockchain = { version = "4.0.0-dev", path = "../../primitives/blockchain" }
sp-core = { version = "7.0.0", path = "../../primitives/core" }
sp-database = { version = "4.0.0-dev", path = "../../primitives/database" }
sp-runtime = { version = "7.0.0", path = "../../primitives/runtime" }
sp-storage = { version = "7.0.0", path = "../../primitives/storage",optional= true }
# Frontier
fc-storage = { version= "1.0.0-dev" , path= "../storage", optional=true }
fp-consensus = {  version = "2.0.0-dev", path = "../../evm-primitives/consensus", features = ["default"], optional = true }
fp-rpc = { path = "../../evm-primitives/rpc", features = ["default"], optional = true }
fp-storage = { version = "2.0.0", path = "../../evm-primitives/storage" }

[dev-dependencies]
futures = { version = "0.3.28" }
maplit = "1.0.2"
tempfile = "3.3.0"
# Substrate
sc-block-builder = { version = "0.10.0-dev", path = "../../client/block-builder" }
sp-consensus = { version = "0.10.0-dev", path = "../../primitives/consensus/common" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../test-utils/runtime/client" }

[features]
default = ["rocksdb"]
rocksdb = [
	"kvdb-rocksdb",
	"sc-client-db/rocksdb",
	"smallvec",
]
sql = [
	"ethereum",
	"futures",
	"sqlx",
	"tokio",
	"sc-client-api",
	"sp-api",
	"sp-storage",
	"fc-storage",
	"fp-consensus",
	"fp-rpc",
]
