[package]
name = "fc-mapping-sync"
version = "2.0.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Mapping sync logic for Frontier."
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = { version = "0.3.28"}
futures-timer = {version = "3.0.2"}
log = {  version = "0.4.17"}
parking_lot = { version = "0.12.1" }
tokio = { version = "1.28.2", features = ["macros", "sync"], optional = true }
# Substrate
sc-client-api = { version = "4.0.0-dev", path = "../../client/api" }
sc-utils = { version = "4.0.0-dev", path = "../../client/utils" }
sp-api = { version = "4.0.0-dev",  path = "../../primitives/api" }
sp-blockchain = { version = "4.0.0-dev", path = "../../primitives/blockchain" }
sp-consensus = { version = "0.10.0-dev", path = "../../primitives/consensus/common", features = ["default"] }
sp-core = { version = "7.0.0", path = "../../primitives/core",optional= true }
sp-runtime = { version = "7.0.0", path = "../../primitives/runtime" }
# Frontier
fc-db = { path = "../db" }
fp-consensus = { version = "2.0.0-dev", path = "../../evm-primitives/consensus" }
fp-rpc = { version = "3.0.0-dev", path = "../../evm-primitives/rpc" }
fc-storage = { version= "1.0.0-dev" , path= "../storage" }

[dev-dependencies]
ethereum = { version = "0.14.0" }
ethereum-types = { version = "0.14.1" }
scale-codec = { package = "parity-scale-codec", version = "3.2.1" }
sqlx = { version = "0.7.0-alpha.3", features = ["runtime-tokio-native-tls", "sqlite"] }
tempfile = "3.3.0"
tokio = { version = "1.28.2", features = ["sync"] }
# Substrate
sc-block-builder = { version = "0.10.0-dev", path = "../../client/block-builder"}
sc-client-db = { version = "0.10.0-dev", path = "../../client/db", features = ["rocksdb"] }
sp-consensus = { version = "0.10.0-dev", path = "../../primitives/consensus/common" }
sp-core = { version = "7.0.0", default-features = false, path = "../../primitives/core"}
sp-io = { version = "7.0.0", default-features = false, path = "../../primitives/io" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../test-utils/runtime/client" }
# Frontier
fp-consensus = { version = "2.0.0-dev", path = "../../evm-primitives/consensus" }
fp-storage = { version = "2.0.0", path = "../../evm-primitives/storage" }
node-5ire-runtime = { version = "3.0.0-dev", path = "../../bin/node/runtime" }

[features]
default = ["rocksdb"]
rocksdb = ["fc-db/rocksdb"]
sql = [
	"tokio",
	"sp-core",
	"fc-db/sql",
]
