[package]
name = "fc-rpc"
version = "2.0.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
edition = "2021"
description = "Ethereum RPC (web3) compatibility layer for Substrate."
 
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ethereum = { version = "0.14.0", features = ["with-codec"] }
ethereum-types = { version = "0.14.1", default-features = false }
evm = { git = "https://github.com/rust-blockchain/evm", rev = "b7b82c7e1fc57b7449d6dfa6826600de37cc1e65", default-features = false }
futures = "0.3.25"
hex = "0.4.3"
jsonrpsee = { version = "0.16.2", features = ["server", "macros"] }
libsecp256k1 = "0.7.1"
log = "0.4.17"
lru = "0.8.1"
prometheus = { version = "0.13.1", default-features = false }
rand = "0.8"
rlp = { version = "0.5", default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.24", features = ["sync"] }

# Substrate
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.10.0-dev", path ="../../utils/prometheus" }
sc-client-api = { version = "4.0.0-dev", path = "../../client/api" }
sc-network = { version = "0.10.0-dev", path = "../../client/network" }
sc-network-common = { version = "0.10.0-dev", path = "../../client/network/common" }
sc-network-sync = { version = "0.10.0-dev", path = "../../client/network/sync" }
sc-rpc = { version = "4.0.0-dev", path = "../../client/rpc" }
sc-service = { version = "0.10.0-dev", default-features = false, path = "../../client/service" }
sc-transaction-pool = { version = "4.0.0-dev", path = "../../client/transaction-pool" }
sc-transaction-pool-api = { version = "4.0.0-dev", path = "../../client/transaction-pool/api" }
sc-utils = { version = "4.0.0-dev", path = "../../client/utils" }
sp-api = { version = "4.0.0-dev", path = "../../primitives/api" }
sp-block-builder = { version = "4.0.0-dev", path = "../../primitives/block-builder" }
sp-blockchain = { version = "4.0.0-dev", path = "../../primitives/blockchain" }
sp-consensus = { version = "0.10.0-dev", path = "../../primitives/consensus/common" }
sp-core = { version = "7.0.0", default-features = false, path = "../../primitives/core" }
sp-io = { version = "7.0.0", default-features = false, path = "../../primitives/io" }
sp-runtime = { version = "7.0.0", path = "../../primitives/runtime" }
sp-state-machine = { version = "0.13.0", path = "../../primitives/state-machine" }
sp-storage = { version = "7.0.0", path = "../../primitives/storage" }
# Frontier
fp-ethereum = { version = "1.0.0-dev", path = "../../evm-primitives/ethereum", default-features = false }
fc-db = { path = "../db" }
fc-rpc-core = { version = "1.1.0-dev", path = "../../evm-client/rpc-core" }
fp-rpc = { version = "3.0.0-dev", path = "../../evm-primitives/rpc",features= ["default"] }
fp-storage = { version = "2.0.0", path = "../../evm-primitives/storage",features= ["default"] }
fc-storage = { version = "1.0.0-dev" ,path ="../storage"}

pallet-evm = { version="6.0.0-dev", path = "../../evm-frame/evm", default-features = false }	
fc-mapping-sync = { path = "../mapping-sync" }	
fp-evm = { version = "3.0.0-dev", path = "../../evm-primitives/evm", default-features = false }

[dev-dependencies]
tempfile = "3.3.0"
# Substrate
sc-block-builder = { version = "0.10.0-dev", path = "../../client/block-builder" }
sc-client-db = { version = "0.10.0-dev", path = "../../client/db" }
sp-consensus = { version = "0.10.0-dev", path = "../../primitives/consensus/common" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../test-utils/runtime/client" }


[features]
default = ["rocksdb"]
rocksdb = [
	"sc-service/rocksdb",
	"fc-db/rocksdb",
	"fc-mapping-sync/rocksdb",
]
rpc-binary-search-estimate = []
