[package]
name = "fc-storage"
version = "1.0.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Ethereum storage compatibility layer for Substrate."
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ethereum = { version = "0.14.0", default-features = false , features = ["with-codec"] }
ethereum-types = { version = "0.14.1", default-features = false , features = ["rlp", "codec"] }
scale-codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive"] }

# Substrate
sc-client-api = { version = "4.0.0-dev", path = "../../client/api" }
sp-api = { version = "4.0.0-dev", path = "../../primitives/api" }
sp-blockchain = { version = "4.0.0-dev", path = "../../primitives/blockchain" }
sp-io = { version = "7.0.0", default-features = false, path = "../../primitives/io" }
sp-runtime = { version = "7.0.0", path = "../../primitives/runtime" }
sp-storage = { version = "7.0.0", path = "../../primitives/storage" }
# Frontier
fp-rpc = { version = "3.0.0-dev", path = "../../evm-primitives/rpc" }
fp-storage = { version = "2.0.0", path = "../../evm-primitives/storage" }
