[package]
name = "pallet-evm"
version = "6.0.0-dev"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
description = "FRAME EVM contracts pallet."
 
 
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
environmental = { version = "1.1.3", default-features = false, optional= true }
evm = { git = "https://github.com/rust-blockchain/evm", rev = "b7b82c7e1fc57b7449d6dfa6826600de37cc1e65", default-features = false,features = ["with-codec"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = "0.4.1"

impl-trait-for-tuples = "0.2.2"
log = { version = "0.4.17", default-features = false }
rlp = { version = "0.5", default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"] }
# Substrate
frame-benchmarking = { version = "4.0.0-dev", path = "../../frame/benchmarking", default-features = false, optional = true }
frame-support = { version = "4.0.0-dev", path = "../../frame/support" , default-features = false }
frame-system = { version = "4.0.0-dev", path = "../../frame/system", default-features = false }
pallet-timestamp = { version = "4.0.0-dev", path = "../../frame/timestamp",default-features = false }
sp-core = { version = "7.0.0", path = "../../primitives/core", default-features = false }
sp-io = { version = "7.0.0", path = "../../primitives/io", default-features = false}
sp-runtime = { version = "7.0.0", default-features = false, path = "../../primitives/runtime" }
sp-std = { version = "5.0.0",path = "../../primitives/std", default-features = false }
# Frontier
fp-account = { version="1.0.0-dev",path="../../evm-primitives/account" ,default-features =false }
fp-evm = { version = "3.0.0-dev", path = "../../evm-primitives/evm", default-features = false }

[dev-dependencies]
# Substrate
pallet-balances = { version = "4.0.0-dev", default-features = false, path = "../../frame/balances" }
pallet-evm-precompile-simple = { version = "2.0.0-dev", path = "../evm/precompile/simple", default-features = false }


[features]
default = ["std"]
std = [
	"environmental?/std",
	"evm/std",
	"evm/with-serde",
	"hex/std",
	"log/std",
	"rlp/std",
	"scale-codec/std",
	"scale-info/std",
	# Substrate
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	# Frontier
	"fp-account/std",
	"fp-evm/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-timestamp/try-runtime",
]
forbid-evm-reentrancy = ["dep:environmental"]
