[package]
name = "fp-account"
version = "1.0.0-dev"
license = "Apache-2.0"
description = "Primitives for Frontier AccountId20."
edition = "2021"

[dependencies]
hex = { version = "0.4.3", default-features = false }
impl-serde = { version = "0.4.0", default-features = false,optional = true }
libsecp256k1 = { version = "0.7.1", default-features = false }
log = { version = "0.4.17", default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"] }
serde = { version = "1.0", features = ["derive"],optional = true}

# Substrate
sp-core = { version = "7.0.0", path = "../../primitives/core" ,default-features = false}
sp-io = { version = "7.0.0", path = "../../primitives/io",default-features = false }
sp-runtime = { version = "7.0.0", path = "../../primitives/runtime" ,default-features = false}
sp-std = { version = "5.0.0",default-features = false, path = "../../primitives/std" }

sp-runtime-interface = { version = "7.0.0", path = "../../primitives/runtime-interface",default-features=false }

[dev-dependencies]

[features]
default = ["std"]
std = [
	"hex/std",
	"impl-serde/std",
	"libsecp256k1/std",
	"log/std",
	"scale-codec/std",
	"scale-info/std",
	"serde/std",
	# Substrate
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-runtime-interface/std",
	"sp-std/std",
]
serde = [
	"dep:serde",
	"impl-serde",
	"scale-info/serde",
	"sp-core/serde",
	"sp-runtime/serde",
]
