[package]
name = "fp-evm"
version = "3.0.0-dev"
license = "Apache-2.0"
edition = "2021"
description = "Primitive EVM abstractions for Substrate."
 
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
#evm = { version = "0.39.1",default-features = false, features = ["with-codec"] }
evm = { git = "https://github.com/rust-blockchain/evm", rev = "b7b82c7e1fc57b7449d6dfa6826600de37cc1e65", default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive"]}
scale-info = { version = "2.3.1", default-features = false, features = ["derive"] }

serde = { version = "1.0",optional = true, features = ["derive", "alloc"] }
# Substrate
frame-support = { version = "4.0.0-dev", path = "../../frame/support" , default-features = false }
sp-core = { version = "7.0.0", path = "../../primitives/core", default-features = false }
sp-std = { version = "5.0.0",path = "../../primitives/std", default-features = false }
sp-runtime = { version = "7.0.0", path = "../../primitives/runtime", default-features = false }

[features]
default = ["std"]
std = [
	"evm/std",
	"evm/with-serde",
	"serde/std",
	"scale-codec/std",
	# Substrate
	"frame-support/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
serde = [
	"dep:serde",
	"scale-info/serde",
	"sp-core/serde",
	"sp-runtime/serde",
]



