[package]
name = "fp-rpc"
version = "3.0.0-dev"
license = "Apache-2.0"
edition = "2021"
description = "Runtime primitives for Ethereum RPC (web3) compatibility layer for Substrate."
 
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ethereum = { version = "0.14.0",features = ["with-codec"] }
ethereum-types = { version = "0.14.1", default-features = false , features = ["rlp", "codec"]}
scale-codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"] }
# Substrate
sp-api = { version = "4.0.0-dev", path = "../../primitives/api", default-features = false }
sp-core = { version = "7.0.0", path = "../../primitives/core", default-features = false }
sp-runtime = { version = "7.0.0", default-features = false, path = "../../primitives/runtime" }
sp-std = { version = "5.0.0",path = "../../primitives/std", default-features = false }
sp-state-machine = { version = "0.13.0", path = "../../primitives/state-machine" }

# Frontier
fp-evm = { version = "3.0.0-dev", path = "../evm", default-features = false }

[features]
default = ["std"]
std = [
	"ethereum/std",
	"ethereum-types/std",
	"scale-codec/std",
	"scale-info/std",
	# Substrate
	"sp-api/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	# Frontier
	"fp-evm/std",
]



